<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>no.nav.foreldrepenger.felles</groupId>
        <artifactId>fp-bom</artifactId>
        <version>0.3.1</version>
    </parent>

    <groupId>no.nav.foreldrepenger.autotest.dokumentgenerator</groupId>
    <artifactId>dokumentgenerator</artifactId>
    <packaging>pom</packaging>
    <name>Dokumentgenerator :: Root</name>
    <version>1.0-SNAPSHOT</version>
    <url>https://github.com/navikt/autotest-dokumentgenerator</url>

    <modules>
        <module>foreldrepengesoknad</module>
        <module>inntektsmelding</module>
    </modules>

    <properties>
        <java.version>17</java.version>

        <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
        <sonar.projectKey>navikt_autotest-dokumentgenerator</sonar.projectKey>
        <sonar.organization>navikt</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>

        <fp-kontrakter.version>6.1.21</fp-kontrakter.version>
        <fpsoknad-felles.version>0.8.14</fpsoknad-felles.version>
    </properties>

    <organization>
        <name>no.nav</name>
        <url>https://github.com/navikt</url>
    </organization>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <organization>NAV (Arbeids- og velferdsdirektoratet) - The Norwegian Labour and Welfare Administration</organization>
            <organizationUrl>https://www.nav.no</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/navikt/autotest-dokumentgenerator.git</connection>
        <developerConnection>scm:git:https://github.com/navikt/autotest-dokumentgenerator.git</developerConnection>
        <url>https://github.com/navikt/autotest-dokumentgenerator/</url>
        <tag>HEAD</tag>
    </scm>

    <dependencyManagement>
        <dependencies>
            <!-- Interne avhengigheter -->
            <dependency>
                <groupId>no.nav.foreldrepenger</groupId>
                <artifactId>fpsoknad-felles</artifactId>
                <version>${fpsoknad-felles.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger</groupId>
                <artifactId>fpsoknad-felles</artifactId>
                <version>${fpsoknad-felles.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger</groupId>
                <artifactId>fpsoknad-felles</artifactId>
                <version>${fpsoknad-felles.version}</version>
                <type>test-jar</type>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.autotest.dokumentgenerator</groupId>
                <artifactId>foreldrepengesoknad</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>no.nav.foreldrepenger.kontrakter</groupId>
            <artifactId>inntektsmelding-v1</artifactId>
            <version>${fp-kontrakter.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <configuration>
                    <flattenMode>bom</flattenMode>
                    <flattenedPomFilename>.flattened</flattenedPomFilename>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub navikt Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/navikt/autotest-dokumentgenerator</url>
        </repository>
    </distributionManagement>
</project>
